according to C99/POSIX, nextafter(x,y) should return y if x==y, from Henning Petersen per PR lib/44875